--- a/src/App.css
+++ b/src/App.css
@@ -8,27 +8,31 @@ a {
 
 .container {
   margin: 0 auto;
-  max-width: 1320px;
+  max-width: 1280px;
+  height: 100%;
+  padding: 0 20px;
 }
 
 @media (max-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 1100px;
   }
 }
 @media (max-width: 992px) {
   .container {
-    max-width: 960px;
+    max-width: 930px;
+    padding: 0 15px;
   }
 }
 @media (max-width: 768px) {
   .container {
-    max-width: 720px;
+    max-width: 690px;
   }
 }
 @media (max-width: 576px) {
   .container {
-    max-width: 540px;
+    max-width: 520px;
+    padding: 0 10px;
   }
 }
 
